--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       "node": true
     },
     "parserOptions": {
-      "ecmaVersion": 6,
+      "ecmaVersion": 8,
       "sourceType": "module"
     },
     "rules": {
@@ -34,36 +34,36 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2017"
     ]
   },
   "homepage": "https://github.com/dougmoscrop/matterjs-webpack-offscreen#readme",
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "comlink-loader": "^1.1.0",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.4.0",
-    "eslint-loader": "^2.1.0",
-    "file-loader": "^2.0.0",
+    "babel-loader": "^8.0.6",
+    "babel-preset-es2017": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.5",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.6.0",
+    "eslint-loader": "^3.0.2",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.2",
-    "node-sass": "^4.9.3",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "webpack-merge": "^4.1.4"
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.13.0",
+    "rimraf": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2",
+    "worker-plugin": "^3.2.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "keypress.js": "^2.1.5",
     "matter-js": "^0.14.2",
-    "comlinkjs": "github:dougmoscrop/comlink#edd400412"
+    "comlink": "^4.1.0"
   }
 }
